--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "export": "next export"
   },
   "dependencies": {
+    "firebase": "^9.9.4",
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
