--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,25 +16,25 @@ jobs:
       - name: Set node version
         uses: actions/setup-node@v2
         with:
-          node-version: "16"
+          node-version: "18"
 
-      - name: Get yarn cache directory path
-        id: yarn-cache-dir-path
-        run: echo "::set-output name=dir::$(yarn cache dir)"
-
-      - uses: actions/cache@v2
-        id: yarn-cache
+      - name: Cache node modules
+        uses: actions/cache@v2
+        env:
+          cache-name: cache-node-modules
         with:
-          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          path: ~/.npm
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
-            ${{ runner.os }}-yarn-
+            ${{ runner.os }}-build-${{ env.cache-name }}-
+            ${{ runner.os }}-build-
+            ${{ runner.os }}-
 
       - name: Install dependencies
-        run: yarn install
+        run: npm install
 
       - name: Build packages
-        run: yarn run build && yarn run export
+        run: npm run build && npm run export
 
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
