fix: rewrite cms config file

--- a/firebase.json
+++ b/firebase.json
@@ -2,6 +2,12 @@
   "hosting": {
     "public": "out",
     "cleanUrls": true,
-    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"]
+    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
+    "rewrites": [
+      {
+        "source": "/config.yml",
+        "destination": "/admin/config.yml"
+      }
+    ]
   }
 }
