--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
+    "frontmatter-markdown-loader": "^3.7.0",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.3.0"
   }
