--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -11,17 +11,14 @@ collections:
     folder: "_posts/blog"
     create: true
     slug: "{{year}}-{{month}}-{{day}}-{{language}}-{{slug}}"
+    i18n: true
     fields:
-      - label: "Language"
-        name: "language"
-        widget: "select"
-        options:
-          - { label: "English", value: "en" }
-          - { label: "Spanish", value: "es" }
-          - { label: "Portuguese", value: "pt" }
-          - { label: "French", value: "fr" }
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Publish Date", name: "date", widget: "datetime" }
       - { label: "Featured Image", name: "thumbnail", widget: "image" }
-      - { label: "Rating (scale of 1-5)", name: "rating", widget: "number" }
       - { label: "Body", name: "body", widget: "markdown" }
+
+i18n:
+  structure: multiple_folders
+  locales: [en, pt, sp, fr]
+  default_locale: en
