--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -2,20 +2,120 @@ backend:
   name: github
   repo: TheCeloReis/celoreis.dev
 
-media_folder: "images/uploads"
+media_folder: public/images/uploads
+public_folder: /images/uploads
+site_domain: location.hostname
 
 collections:
   - name: "blog"
     label: "Blog"
-    folder: "_posts/blog"
+    folder: "content/blog"
+    extension: "mdx"
+    format: "frontmatter"
     create: true
-    slug: "{{year}}-{{month}}-{{day}}-{{language}}-{{slug}}"
+    identifier_field: slug
+    slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
+    summary: "{{title}}"
     i18n: true
     fields:
-      - { label: "Title", name: "title", widget: "string", i18n: true }
-      - { label: "Publish Date", name: "date", widget: "datetime" }
-      - { label: "Featured Image", name: "thumbnail", widget: "image" }
-      - { label: "Body", name: "body", widget: "markdown", i18n: true }
+      - label: "Slug"
+        name: "slug"
+        widget: "string"
+      - label: "Title"
+        name: "title"
+        widget: "string"
+        i18n: true
+      - label: "Publish Date"
+        name: "date"
+        widget: "datetime"
+      - label: Author
+        name: "author"
+        widget: relation
+        collection: "meta"
+        file: "authors"
+        searchFields:
+          - "authors.*.name"
+        displayFields:
+          - "authors.*.name"
+        valueField: "authors.*.slug"
+      - label: Tags
+        label_singular: "Tag"
+        name: "tags"
+        widget: list
+        summary: "{{fields.tag}}"
+        field:
+          label: Tag
+          name: tag
+          widget: relation
+          collection: "meta"
+          file: "tags"
+          searchFields:
+            - "tags.*.name"
+          displayFields:
+            - "tags.*.name"
+          valueField: "tags.*.slug"
+      - label: "Featured Image"
+        name: "thumbnail"
+        widget: "image"
+      - label: "Body"
+        name: "body"
+        widget: "markdown"
+        i18n: true
+
+  - name: "meta"
+    label: "Meta"
+    delete: false
+
+    structure: single_file
+    locales: [en, pt, sp, fr]
+    default_locale: en
+
+    editor:
+      preview: false
+    files:
+      - name: "authors"
+        label: "Authors"
+        file: "meta/authors.yml"
+        description: "Author descriptions"
+        i18n: true
+        fields:
+          - name: authors
+            label: Authors
+            label_singular: "Author"
+            widget: list
+            fields:
+              - label: "Slug"
+                name: "slug"
+                widget: "string"
+                hint: "The part of a URL identifies the author"
+              - label: "Name"
+                name: "name"
+                widget: "string"
+                hint: "First and Last"
+              - label: "Introduction"
+                name: "introduction"
+                widget: "text"
+                i18n: true
+      - name: "tags"
+        label: "Tags"
+        file: "meta/tags.yml"
+        description: "List of tags"
+        i18n: true
+        fields:
+          - name: tags
+            label: Tags
+            label_singular: "Tag"
+            widget: list
+            fields:
+              - label: "Slug"
+                name: "slug"
+                widget: "string"
+                hint: "The part of a URL identifies the tag"
+              - label: "Display Name"
+                name: "name"
+                widget: "string"
+                hint: "Tag name for displaying on the site"
+                i18n: true
 
 i18n:
   structure: multiple_folders
