--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "@types/node": "18.15.11",
     "@types/react": "18.0.31",
     "@types/react-dom": "18.0.11",
+    "dayjs": "^1.11.7",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
+    "gray-matter": "^4.0.3",
+    "js-yaml": "^4.1.0",
     "next": "13.2.4",
+    "next-mdx-remote": "^4.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
