--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dayjs": "^1.11.7",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
+    "firebase": "^9.19.0",
     "gray-matter": "^4.0.3",
     "js-yaml": "^4.1.0",
     "next": "13.2.4",
