--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@react-aria/optimize-locales-plugin": "^1.1.2",
+    "dayjs": "^1.11.13",
     "next": "14.2.15",
     "react": "^18",
     "react-aria-components": "^1.4.0",
