--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -26,45 +26,45 @@ collections:
         fields:
           - { label: Title, name: title, widget: string, i18n: true }
           - { label: Intro, name: intro, widget: markdown, i18n: true }
-          - label: "Experiences"
-            name: "experiences"
-            widget: "list"
-            summary: "{{fields.jobTitle}} at {{fields.company}}"
-            i18n: true
-            fields:
-              - { label: Job Title, name: jobTitle, widget: string, i18n: true }
-              - { label: Company, name: company, widget: string, i18n: true }
-              - { label: Location, name: location, widget: string, i18n: true }
-              - {
-                  label: Company Logo,
-                  name: image,
-                  widget: image,
-                  i18n: "duplicate",
-                }
-              - {
-                  label: Start Date,
-                  name: startDate,
-                  widget: datetime,
-                  i18n: "duplicate",
-                  date_format: "YYYY-MM-DD",
-                  time_format: false,
-                }
-              - {
-                  label: End Date,
-                  name: endDate,
-                  widget: datetime,
-                  i18n: "duplicate",
-                  date_format: "YYYY-MM-DD",
-                  time_format: false,
-                  required: false,
-                }
-              - { label: Description, name: description, widget: markdown }
-              - { label: Skills, name: skills, widget: string, i18n: true }
 
-  - name: "blog" # Used in routes, e.g., /admin/collections/blog
-    label: "Blog" # Used in the UI
-    folder: "content/blog-posts" # The path to the folder where the documents are stored
-    create: true # Allow users to create new documents in this collection
+  - label: "Experiences"
+    name: "experiences"
+    summary: "{{jobTitle}} at {{company}}"
+    folder: "content/experiences"
+    slug: "{{startDate}}-{{company}}"
+    create: true
+    i18n:
+      structure: single_file
+      locales: [en, pt, es]
+    fields:
+      - { label: Job Title, name: jobTitle, widget: string, i18n: true }
+      - { label: Company, name: company, widget: string, i18n: true }
+      - { label: Location, name: location, widget: string, i18n: true }
+      - { label: Company Logo, name: image, widget: image, i18n: "duplicate" }
+      - {
+          label: Start Date,
+          name: startDate,
+          widget: datetime,
+          i18n: "duplicate",
+          date_format: "YYYY-MM-DD",
+          time_format: false,
+        }
+      - {
+          label: End Date,
+          name: endDate,
+          widget: datetime,
+          i18n: "duplicate",
+          date_format: "YYYY-MM-DD",
+          time_format: false,
+          required: false,
+        }
+      - { label: Description, name: description, widget: markdown }
+      - { label: Skills, name: skills, widget: string, i18n: true }
+
+  - name: "blog"
+    label: "Blog"
+    folder: "content/blog-posts"
+    create: true
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     i18n: true
     fields: # The fields for each document, usually in front matter
