--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "frontmatter-markdown-loader": "^3.7.0",
     "postcss": "^8",
     "prettier": "^3.3.3",
+    "sass": "^1.79.5",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
