chore: Update to next 15

--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
   "dependencies": {
     "@react-aria/optimize-locales-plugin": "^1.1.2",
     "dayjs": "^1.11.13",
-    "next": "14.2.15",
-    "react": "^18",
+    "next": "^15.1.7",
+    "react": "^19.0.0",
     "react-aria-components": "^1.4.0",
-    "react-dom": "^18",
+    "react-dom": "^19.0.0",
     "react-feather": "^2.0.10",
     "react-markdown": "^8.0.7",
     "tailwind-merge": "^2.5.3",
@@ -29,7 +29,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.2.15",
+    "eslint-config-next": "^15.1.7",
     "frontmatter-markdown-loader": "^3.7.0",
     "postcss": "^8",
     "prettier": "^3.3.3",
