--- a/package.json
+++ b/package.json
@@ -19,13 +19,14 @@
     "react-aria-components": "^1.4.0",
     "react-dom": "^19.0.0",
     "react-feather": "^2.0.10",
-    "react-markdown": "^8.0.7",
-    "tailwind": "^4.0.0",
+    "react-markdown": "^10.0.0",
     "tailwind-merge": "^3.0.1",
     "usehooks-ts": "^3.1.1"
   },
   "devDependencies": {
     "@next/third-parties": "^15.1.7",
+    "@tailwindcss/postcss": "^4.0.8",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
@@ -35,7 +36,7 @@
     "postcss": "^8",
     "prettier": "^3.3.3",
     "sass": "^1.79.5",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^4.0.8",
     "typescript": "^5"
   }
 }
