feat: Adds code highlight

--- a/package.json
+++ b/package.json
@@ -14,12 +14,19 @@
   "dependencies": {
     "@react-aria/optimize-locales-plugin": "^1.1.2",
     "dayjs": "^1.11.13",
+    "highlight.js": "^11.11.1",
     "next": "^15.1.7",
     "react": "^19.0.0",
     "react-aria-components": "^1.4.0",
     "react-dom": "^19.0.0",
     "react-feather": "^2.0.10",
     "react-markdown": "^10.0.0",
+    "rehype-highlight": "^7.0.2",
+    "rehype-highlight-code-lines": "^1.1.2",
+    "remark": "^15.0.1",
+    "remark-gfm": "^4.0.1",
+    "remark-heading-id": "^1.0.1",
+    "remark-toc": "^9.0.0",
     "tailwind-merge": "^3.0.1",
     "usehooks-ts": "^3.1.1"
   },
@@ -30,6 +37,7 @@
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/remark-heading-id": "^1.0.0",
     "eslint": "^8",
     "eslint-config-next": "^15.1.7",
     "frontmatter-markdown-loader": "^3.7.0",
