--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -2,7 +2,6 @@ local_backend: true
 
 backend:
   name: git-gateway
-  branch: reboot # Branch to update (optional; defaults to master)
 
 media_library:
   name: cloudinary
@@ -15,7 +14,8 @@ media_library:
           quality: auto
           crop: scale
 
-public_folder: "/images/uploads" # The src attribute for uploaded media will begin with /images/uploads
+public_folder: "/images/uploads"
+media_folder: "public/images/uploads"
 
 i18n:
   structure: multiple_folders
